objects/Required_Parts__c/Required_Parts__c.object-meta.xml
<CustomObject>
    <label>Required Parts</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Required Parts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Required Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>