objects/Required_Parts__c/fields/Include_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Include_Invoice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Invoice</label>
    <type>Checkbox</type>
</CustomField>