objects/Required_Parts__c/fields/Parts_Used_Description__c.field-meta.xml
<CustomField>
    <fullName>Parts_Used_Description__c</fullName>
    <label>Parts Used / Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>