objects/Required_Parts__c/fields/PricebookEntryId__c.field-meta.xml
<CustomField>
    <fullName>PricebookEntryId__c</fullName>
    <label>PricebookEntryId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>