objects/Required_Parts__c/fields/Service_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Service_Sheet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Sheet</label>
    <referenceTo>Engineer_Checklist__c</referenceTo>
    <relationshipLabel>Required Parts</relationshipLabel>
    <relationshipName>Required_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>