objects/Required_Parts__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Required Parts</relationshipLabel>
    <relationshipName>Required_Parts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>